<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/licenseFragment">

    <fragment
        android:id="@+id/licenseFragment"
        android:name="com.blackgrapes.slmtoolbox.ui.license.LicenseFragment"
        android:label="@string/license_title"
        tools:layout="@layout/fragment_license">
        <action
            android:id="@+id/action_license_to_survey"
            app:destination="@id/surveyMapFragment"
            app:popUpTo="@id/licenseFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/surveyMapFragment"
        android:name="com.blackgrapes.slmtoolbox.ui.survey.SurveyMapFragment"
        android:label="@string/survey_title"
        tools:layout="@layout/fragment_survey_map">
        <action
            android:id="@+id/action_survey_to_sld_preview"
            app:destination="@id/sldPreviewFragment" />
        <action
            android:id="@+id/action_survey_to_my_sld"
            app:destination="@id/mySldFragment" />
        <action
            android:id="@+id/action_survey_to_license"
            app:destination="@id/licenseFragment"
            app:popUpTo="@id/surveyMapFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/sldPreviewFragment"
        android:name="com.blackgrapes.slmtoolbox.ui.preview.SldPreviewFragment"
        android:label="@string/sld_preview"
        tools:layout="@layout/fragment_sld_preview">
        <argument
            android:name="surveyId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/mySldFragment"
        android:name="com.blackgrapes.slmtoolbox.ui.preview.MySldFragment"
        android:label="@string/my_maps"
        tools:layout="@layout/fragment_my_sld" />
</navigation>
